# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-97db95eb/example-97db95eb-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb"]
        
        [project]
        name = "example-97db95eb"
        version = "0.0.0"
        dependencies = ["example-97db95eb-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
  
      ''',
      'build/example-97db95eb/example-97db95eb-0.0.0/src/example_97db95eb/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-97db95eb/example-97db95eb-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb_a"]
        
        [project]
        name = "example-97db95eb-a"
        version = "1.0.0"
        dependencies = ["example-97db95eb-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-97db95eb/example-97db95eb-a-1.0.0/src/example_97db95eb_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-97db95eb/example-97db95eb-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb_b"]
        
        [project]
        name = "example-97db95eb-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-97db95eb/example-97db95eb-b-1.0.0/src/example_97db95eb_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-97db95eb/example-97db95eb-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb_b"]
        
        [project]
        name = "example-97db95eb-b"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-97db95eb/example-97db95eb-b-2.0.0/src/example_97db95eb_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-97db95eb/example-97db95eb-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb_b"]
        
        [project]
        name = "example-97db95eb-b"
        version = "3.0.0"
        dependencies = ["example-97db95eb-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-97db95eb/example-97db95eb-b-3.0.0/src/example_97db95eb_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-97db95eb/example_97db95eb-0.0.0.tar.gz': 'md5:e6d7f51fec17fadbce60923f87baedb9',
      'dist/example-97db95eb/example_97db95eb_a-1.0.0-py3-none-any.whl': 'md5:b4d61e7aa5ba73b2d91aaebba560ad51',
      'dist/example-97db95eb/example_97db95eb_a-1.0.0.tar.gz': 'md5:366ab6f477066ca3c478b638c01dc9a1',
      'dist/example-97db95eb/example_97db95eb_b-1.0.0-py3-none-any.whl': 'md5:70e2bd7bf120d6237f3ba20d0c406d16',
      'dist/example-97db95eb/example_97db95eb_b-1.0.0.tar.gz': 'md5:e7d797a2de9f12cc78ee65739e1e8e91',
      'dist/example-97db95eb/example_97db95eb_b-2.0.0-py3-none-any.whl': 'md5:1deddaa828b3688f5634b9868de8feba',
      'dist/example-97db95eb/example_97db95eb_b-2.0.0.tar.gz': 'md5:6329ae9ea40f43eac05ba7e2351850d0',
      'dist/example-97db95eb/example_97db95eb_b-3.0.0-py3-none-any.whl': 'md5:e0fbb1009759f814786a94c79537be8b',
      'dist/example-97db95eb/example_97db95eb_b-3.0.0.tar.gz': 'md5:f32ed7d0dbc7c56982d96cba13ebbb2e',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-97db95eb
        │       ├── example-97db95eb-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_97db95eb
        │       │           └── __init__.py
        │       ├── example-97db95eb-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_97db95eb_a
        │       │           └── __init__.py
        │       ├── example-97db95eb-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_97db95eb_b
        │       │           └── __init__.py
        │       ├── example-97db95eb-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_97db95eb_b
        │       │           └── __init__.py
        │       └── example-97db95eb-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_97db95eb_b
        │                   └── __init__.py
        └── dist
            └── example-97db95eb
                ├── example_97db95eb-0.0.0.tar.gz
                ├── example_97db95eb_a-1.0.0-py3-none-any.whl
                ├── example_97db95eb_a-1.0.0.tar.gz
                ├── example_97db95eb_b-1.0.0-py3-none-any.whl
                ├── example_97db95eb_b-1.0.0.tar.gz
                ├── example_97db95eb_b-2.0.0-py3-none-any.whl
                ├── example_97db95eb_b-2.0.0.tar.gz
                ├── example_97db95eb_b-3.0.0-py3-none-any.whl
                └── example_97db95eb_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-97db95eb
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-97db95eb' in directory 'build/example-97db95eb'
      Destination directory '[PWD]/build/example-97db95eb' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-9fa36ff3/example-9fa36ff3-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_9fa36ff3"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_9fa36ff3"]
        
        [project]
        name = "example-9fa36ff3"
        version = "0.0.0"
        dependencies = ["example-9fa36ff3-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-0.0.0/src/example_9fa36ff3/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_9fa36ff3_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_9fa36ff3_a"]
        
        [project]
        name = "example-9fa36ff3-a"
        version = "1.0.0"
        dependencies = ["example-9fa36ff3-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-a-1.0.0/src/example_9fa36ff3_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_9fa36ff3_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_9fa36ff3_b"]
        
        [project]
        name = "example-9fa36ff3-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-b-1.0.0/src/example_9fa36ff3_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_9fa36ff3_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_9fa36ff3_b"]
        
        [project]
        name = "example-9fa36ff3-b"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-b-2.0.0/src/example_9fa36ff3_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_9fa36ff3_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_9fa36ff3_b"]
        
        [project]
        name = "example-9fa36ff3-b"
        version = "3.0.0"
        dependencies = ["example-9fa36ff3-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-b-3.0.0/src/example_9fa36ff3_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-9fa36ff3/example_9fa36ff3-0.0.0.tar.gz': 'md5:31792dc1492b2f1971739f8f31f909dc',
      'dist/example-9fa36ff3/example_9fa36ff3_a-1.0.0-py3-none-any.whl': 'md5:9006eac8dd7a14b622570c068b33344d',
      'dist/example-9fa36ff3/example_9fa36ff3_a-1.0.0.tar.gz': 'md5:4febfe87d4cf18c49a40cf5fa8c1d3e9',
      'dist/example-9fa36ff3/example_9fa36ff3_b-1.0.0-py3-none-any.whl': 'md5:c383da3275f610b595b5ec698f1fc82e',
      'dist/example-9fa36ff3/example_9fa36ff3_b-1.0.0.tar.gz': 'md5:35aaf3d21e1cb43a9581aefd7c771b1f',
      'dist/example-9fa36ff3/example_9fa36ff3_b-2.0.0-py3-none-any.whl': 'md5:2ac250a2dec25d04ae7cd5898da88974',
      'dist/example-9fa36ff3/example_9fa36ff3_b-2.0.0.tar.gz': 'md5:c037f5ec9b3468f716959b9e16a4287a',
      'dist/example-9fa36ff3/example_9fa36ff3_b-3.0.0-py3-none-any.whl': 'md5:0b783def8a3824f96d858ea3c28e1018',
      'dist/example-9fa36ff3/example_9fa36ff3_b-3.0.0.tar.gz': 'md5:20147a77b322a575c7f00fa87cbb5a74',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-9fa36ff3
        │       ├── example-9fa36ff3-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_9fa36ff3
        │       │           └── __init__.py
        │       ├── example-9fa36ff3-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_9fa36ff3_a
        │       │           └── __init__.py
        │       ├── example-9fa36ff3-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_9fa36ff3_b
        │       │           └── __init__.py
        │       ├── example-9fa36ff3-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_9fa36ff3_b
        │       │           └── __init__.py
        │       └── example-9fa36ff3-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_9fa36ff3_b
        │                   └── __init__.py
        └── dist
            └── example-9fa36ff3
                ├── example_9fa36ff3-0.0.0.tar.gz
                ├── example_9fa36ff3_a-1.0.0-py3-none-any.whl
                ├── example_9fa36ff3_a-1.0.0.tar.gz
                ├── example_9fa36ff3_b-1.0.0-py3-none-any.whl
                ├── example_9fa36ff3_b-1.0.0.tar.gz
                ├── example_9fa36ff3_b-2.0.0-py3-none-any.whl
                ├── example_9fa36ff3_b-2.0.0.tar.gz
                ├── example_9fa36ff3_b-3.0.0-py3-none-any.whl
                └── example_9fa36ff3_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-9fa36ff3
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [-v] [-q] targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
